# ninai

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TIER_STRUCTURE.md  benchmark_queries.py  create_indexes.py  create_indexes.sql  docker-compose.ocr.yml  docker-compose.yml  package-lock.json  test_webhook_receiver.py  verify_migration.py
backend/: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_app_startup.py  test_routes.py  test_server.py
backend/alembic/: MIGRATIONS.md  env.py  script.py.mako
backend/app/: __init__.py  database.py  main.py
backend/integrations/: __init__.py  crewai_adapter.py  external_sync.py  langchain_adapter.py  langgraph_adapter.py  llamaindex_adapter.py
backend/performance-tests/: alert-operations.js  queue-operations.js  run-performance-tests.ps1  snapshot-operations.js  (+1 more)
docker/: ollama-compose.yaml
docs/: EDITIONS.md  FEATURES.md  generate_scalable_deployment_diagram.py
frontend/: .env  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  rbac.yaml  secrets.yaml.template  service.yaml
notebooks/: _walmart_demo_lib.py  aiops_automation.ipynb  att_customer_service_demo.ipynb  multimodal_memory_demo.ipynb  walmart_multimodal_shopping_demo.ipynb
observability/: docker-compose.observability.yml
pandoc/: pandoc.yaml
scripts/: compile_markdown_docs.py  migrate_and_start.bat  migrate_and_start.sh  move_or_delete_merged_markdown_sources.py  validate_merged_docs.py
sdk/python/: pyproject.toml
sdk/python/ninai/: __init__.py  agents.py  client.py  exceptions.py  models.py  observability.py  resources.py  tools.py
(+570 files in other folders)
